# gnomecast

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml
backend_ndl/: CMakeLists.txt  README.md  THIRD_PARTY.md
backend_ndl/cmake/: backend_ndlConfig.cmake.in
backend_ndl/include/backend_ndl/: backend_ndl.h
backend_ndl/src/: backend_ndl.c  backend_ndl_api.h
backend_ndl/tests/: test_backend_ndl.c
backend_ndl/tests/support/libndl-media/: NDL_directmedia.h  README.md
docs/: README.md  audio-rdpsnd-design-notes.md  build-environment.md  future-work.md  native-runbook.md
docs/reviews/: 2026-07-04-input-subsystem.md
native/: CMakeLists.txt  README.md
native/cmake/: ExternalOPUS.cmake
native/deploy/webos/: appinfo.json
native/include/: au_snapshot.h  audio_backend.h  audio_mixer.h  audio_opus.h  audio_pipeline.h  audio_ss4s.h  category_log.h  clog.h  config_paths.h  cursor_sdl.h  h264_annexb.h  input_evdev.h  input_sdl.h  keyboard_evdev.h  luna_volume.h  lv_conf.h  media_backend.h  media_ss4s.h  mouse_evdev.h  rdp_ffi.h  rdp_log.h  settings_json.h  ui_fonts.h  ui_host.h  ui_mixer.h  ui_preconnect.h  ui_profile_name.h  ui_slot_palette.h  video_backend.h  video_rgba_sdl.h  video_ss4s.h
native/src/: au_snapshot.c  audio_mixer.c  audio_opus.c  audio_pipeline.c  audio_ss4s.c  category_log.c  config_paths.c  cursor_sdl.c  h264_annexb.c  input_evdev.c  input_sdl.c  keyboard_evdev.c  luna_volume.c  main.c  media_ss4s.c  mouse_evdev.c  rdp_ffi_stub.c  rdp_log.c  settings_json.c  ui_mixer.c  ui_preconnect.c  video_rgba_sdl.c  video_ss4s.c
native/src/fonts/: lv_font_ibm_plex_mono_regular_16.c  lv_font_ibm_plex_mono_regular_22.c  lv_font_ibm_plex_mono_regular_22_profile.c  lv_font_ibm_plex_mono_semibold_18.c  lv_font_ibm_plex_mono_semibold_28.c  lv_font_ibm_plex_sans_regular_20.c  lv_font_ibm_plex_sans_regular_24.c  lv_font_ibm_plex_sans_semibold_24.c  lv_font_ibm_plex_sans_semibold_24_profile.c  lv_font_ibm_plex_sans_semibold_40.c  lv_font_ibm_plex_sans_semibold_40_profile.c  lv_font_ibm_plex_sans_semibold_86.c  lv_font_ibm_plex_sans_semibold_86_profile.c  lv_font_jetbrains_mono_semibold_28.c
native/src/ndl_adapter/: audio_ndl.c  media_ndl.c  media_ndl_internal.h  video_ndl.c
native/tests/: check_ui_font_coverage.py  clog_helper_one.c  clog_helper_two.c  test_au_snapshot.c  test_audio_mixer.c  test_audio_ndl.c  test_audio_opus.c  test_audio_pipeline.c  test_category_log.c  test_category_log_ndebug.c  test_config_paths.c  test_cursor_sdl.c  test_h264_annexb.c  test_input_sdl.c  test_luna_volume.c  test_media_ndl_log_level.c  test_rdp_ffi_layout.c  test_rdp_log.c  test_settings_json.c  test_ui_host.c  test_ui_profile_name.c  test_video_ndl.c  test_video_rgba_sdl.c
native/tests/support/fake_sdl/: SDL.h
patches/ironrdp/: 0001-gnome-rdp-support.patch
tools/: build-native-webos.sh  check-logging-policy.sh  deploy-native-webos.sh  push-build-image.sh  release-github.sh  syntax-check-native.sh
webrdp-min/: Cargo.toml
webrdp-min/src/: credssp.rs  crypto.rs  der.rs  lib.rs  native.rs  ntlm.rs
